--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,110 +1,96 @@
 * {
   box-sizing: border-box;
 }
+
+h1, h2, section, p {
+  font-family: 'Playfair Display', 'Didot', 'Baskerville', serif;
+  color: #555;
+}
+
 h1 {
   margin-bottom: 15px;
+  text-align: center;
+  font-size: 1.75em;
+}
+
+section {
+  padding: 0 10px;
+  margin-bottom: 20px;
+}
+
+h2 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: -1px -1px auto auto;
+  padding: 0 2em;
+  border-radius: 0 15px 0 3px;
+  font-size: 1.75em;
+  color: crimson;
 }
 
 p {
-  border: 1px solid black;
-  background-color: #A52A2A;
   width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
+  margin: 0 auto 20px auto;
+  font-size: 1.25em;
+}
+
+.content, h2 {
+  border: 1px solid black;
+  border-radius: 3px 15px 3px 3px;
+}
+
+/********** Setting colors for headers in each section **********/
+.ravioli h2 {
+  background: linear-gradient(to right bottom, white, limegreen);
+}
+
+.spaghetti h2 {
+  background: radial-gradient(farthest-corner at -5% 15%, white, gold); 
+}
+
+.varenyky h2 {
+  background: repeating-linear-gradient(to right, white, coral 50%, white 99%);
 }
 
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
+  margin: 20px 0 20px 0;
+}
+
+.content {
+  position: relative;
+  padding-top: 40px;
+  background: silver;
 }
 
 /********** Large devices only **********/
-@media (min-width: 1200px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-    border: 1px solid green;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
+@media (min-width: 992px) {
   .col-lg-4 {
+    float: left;
     width: 33.33%;
   }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
+
 }
 
 /********** Medium devices only **********/
-@media (min-width: 950px) and (max-width: 1199px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-6, .col-md-12 {
     float: left;
-    border: 1px solid green;
-  }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
   }
   .col-md-6 {
     width: 50%;
   }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
   .col-md-12 {
     width: 100%;
+  }
+}
+/********* For setting offset on mobile devices ********/
+@media (max-width: 767px) {
+  .row {
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
